Correções de segurança